--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <title>Document</title>
     <script src="https://kit.fontawesome.com/6938a8e1dc.js" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="style.css">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.7/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-LN+7fdVzj6u52u30Kp6M/trliBMCMKTyK833zpbD+pXdCLuTusPj697FH4R/5mcr" crossorigin="anonymous">
 </head>
 <body>
     <div class="fluid-container">
@@ -47,6 +48,83 @@
                     <div style="padding: 4px; border-radius: 50%; background-color: #4caf4f3b;"> </div>
                 </div>
             </section>
+            <br>
+
+
+
+
+
+            <section class="thrd">
+                <div class="text3">
+                    <h1 style="color: #4D4D4D;">Our clients</h1>
+                    <p style="color: #717171;">We have been working with some Fortune 500+ clients</p>
+                </div>
+                <div class="logos">
+                    <div><img src="images/Logoo (1).png"></div>
+                    <div><img src="images/Logo (1).png"l></div>
+                    <div><img src="images/Logo (2).png"></div>
+                    <div><img src="images/Logo (3).png"></div>
+                    <div><img src="images/Logo (4).png"></div>
+                    <div><img src="images/Logo (5).png"></div>
+                    <div><img src="images/Logo (6).png"></div>
+                </div>
+            </section>
+            <br>
+
+
+
+
+
+
+            <section class="fourth">
+                <div class="text4">
+                    <h1 style="color: #4D4D4D;">Manage your entire community<br>in a single system</h1>
+                    <p style="color: #717171;">Who is Nextcent suitable for?</p>
+                </div>
+                <div class="card-group">
+                    <div class="card cd">
+                      <img src="images/Icon.png" class="card-img-top image4">
+                      <div class="card-body">
+                        <h5 class="card-title">Membership Organisations</h5>
+                        <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+                        <p class="card-text"><small class="text-body-secondary">Last updated 3 mins ago</small></p>
+                      </div>
+                    </div>
+                    <div class="card cd">
+                      <img src="images/Icon (1).png" class="card-img-top image4">
+                      <div class="card-body">
+                        <h5 class="card-title">National Associations</h5>
+                        <p class="card-text">This card has supporting text below as a natural lead-in to additional content.</p>
+                        <p class="card-text"><small class="text-body-secondary">Last updated 3 mins ago</small></p>
+                      </div>
+                    </div>
+                    <div class="card cd">
+                      <img src="images/Icon (2).png" class="card-img-top image4">
+                      <div class="card-body">
+                        <h5 class="card-title">Clubs And Groups</h5>
+                        <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This card has even longer content than the first to show that equal height action.</p>
+                        <p class="card-text"><small class="text-body-secondary">Last updated 3 mins ago</small></p>
+                      </div>
+                    </div>
+                  </div>
+                <!-- <div class="fourth-cards">
+                    <div class="card">
+                        <img src="images/Icon.png">
+                        <h2 style="color: #4D4D4D;">Membership Organisations</h2>
+                        <p style="color: #717171; font-size: 13px;">Our membership management software provides full automation of membership renewals and payments</p>
+                    </div>
+                    <div class="card">
+                        <img src="images/Icon (1).png">
+                        <h2 style="color: #4D4D4D;">National Associations</h2>
+                        <p style="color: #717171; font-size: 13px;">Our membership management software provides full automation of membership renewals and payments</p>
+                    </div>
+                    <div class="card">
+                        <img src="images/Icon (2).png">
+                        <h2 style="color: #4D4D4D;">Clubs And Groups</h2>
+                        <p style="color: #717171; font-size: 13px;">Our membership management software provides full automation of membership renewals and payments</p>
+                    </div>
+                </div> -->
+            </section>
 
 
 
@@ -54,5 +132,7 @@
 
         </div>
     </div>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.7/dist/js/bootstrap.bundle.min.js" integrity="sha384-ndDqU0Gzau9qJ1lfW4pNLlhNTkCfHzAVBReH9diLvGRem5+R9g2FzA8ZGN954O5Q" crossorigin="anonymous"></script>
+</body>
 </body>
 </html>
