--- a/index.html
+++ b/index.html
@@ -9,6 +9,9 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.7/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-LN+7fdVzj6u52u30Kp6M/trliBMCMKTyK833zpbD+pXdCLuTusPj697FH4R/5mcr" crossorigin="anonymous">
 </head>
 <body>
+
+
+
     <div class="fluid-container">
         <div class="container">
             <header>
@@ -22,7 +25,7 @@
                         <li><a href="">Community</a></li>
                         <li><a href="">Blog</a></li>
                         <li><a href="">Pricing</a></li>
-                        <button class="reg-btn">Register Now <i class="fa-solid fa-arrow-right"></i></button>
+                        <button class="reg-btn">Register Now <i class="fa-solid fa-arrow-right" style="font-size: 12px;"></i></button>
                     </div>
                 </nav>
             </header>
@@ -35,7 +38,7 @@
                 <div class="main2">
                     <div class="text2">
                         <h1>Lessons and insights<br><span style="color: #4CAF4F;">from 8 years</span></h1>
-                        <p style="color: #717171;">Where to grow your business as a photographer: site or social media?</p>
+                        <p>Where to grow your business as a photographer: site or social media?</p>
                         <button class="reg-btn">Register</button>
                     </div>
                     <div class="image2">
@@ -43,7 +46,7 @@
                     </div>
                 </div>
                 <div class="circle">
-                    <div style="padding: 4px; border-radius: 50%; background-color: #4CAF4F;"> </div>
+                    <div style="padding: 4px; border-radius: 50%; background-color: #4CAF4F;"></div>
                     <div style="padding: 4px; border-radius: 50%; background-color: #4caf4f86;"> </div>
                     <div style="padding: 4px; border-radius: 50%; background-color: #4caf4f3b;"> </div>
                 </div>
@@ -56,8 +59,8 @@
 
             <section class="thrd">
                 <div class="text3">
-                    <h1 style="color: #4D4D4D;">Our clients</h1>
-                    <p style="color: #717171;">We have been working with some Fortune 500+ clients</p>
+                    <h3>Our clients</h3>
+                    <p>We have been working with some Fortune 500+ clients</p>
                 </div>
                 <div class="logos">
                     <div><img src="images/Logoo (1).png"></div>
@@ -69,7 +72,7 @@
                     <div><img src="images/Logo (6).png"></div>
                 </div>
             </section>
-            <br>
+            <br><br>
 
 
 
@@ -78,54 +81,199 @@
 
             <section class="fourth">
                 <div class="text4">
-                    <h1 style="color: #4D4D4D;">Manage your entire community<br>in a single system</h1>
-                    <p style="color: #717171;">Who is Nextcent suitable for?</p>
+                    <h3>Manage your entire community<br>in a single system</h3>
+                    <p>Who is Nextcent suitable for?</p>
                 </div>
-                <div class="card-group">
-                    <div class="card cd">
-                      <img src="images/Icon.png" class="card-img-top image4">
-                      <div class="card-body">
-                        <h5 class="card-title">Membership Organisations</h5>
-                        <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
-                        <p class="card-text"><small class="text-body-secondary">Last updated 3 mins ago</small></p>
-                      </div>
+                <br>
+
+
+
+                <div class="cards-group4">
+                    
+                    <div class="card cd" style="width: 18rem;">
+                      <div class="card-body cd-body">
+                            <img src="images/Icon.png">
+                            <h4 class="card-title cd-title">Membership Organisations</h4>
+                            <p class="card-text cd-text">Our membership management software provides full automation of membership renewals and payments</p>
+                        </div>
                     </div>
-                    <div class="card cd">
-                      <img src="images/Icon (1).png" class="card-img-top image4">
-                      <div class="card-body">
-                        <h5 class="card-title">National Associations</h5>
-                        <p class="card-text">This card has supporting text below as a natural lead-in to additional content.</p>
-                        <p class="card-text"><small class="text-body-secondary">Last updated 3 mins ago</small></p>
-                      </div>
+
+
+
+                    <div class="card cd" style="width: 18rem;">
+                      <div class="card-body cd-body">
+                            <img src="images/Icon (1).png">
+                            <h4 class="card-title cd-title">National Associations</h4>
+                            <p class="card-text cd-text">Our membership management software provides full automation of membership renewals and payments</p>
+                        </div>
                     </div>
-                    <div class="card cd">
-                      <img src="images/Icon (2).png" class="card-img-top image4">
-                      <div class="card-body">
-                        <h5 class="card-title">Clubs And Groups</h5>
-                        <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This card has even longer content than the first to show that equal height action.</p>
-                        <p class="card-text"><small class="text-body-secondary">Last updated 3 mins ago</small></p>
-                      </div>
+
+
+
+                    <div class="card cd" style="width: 18rem;">
+                      <div class="card-body cd-body">
+                            <img src="images/Icon (2).png">
+                            <h4 class="card-title cd-title">Clubs And<br>Groups</h4>
+                            <p class="card-text cd-text">Our membership management software provides full automation of membership renewals and payments</p>
+                        </div>
                     </div>
-                  </div>
-                <!-- <div class="fourth-cards">
-                    <div class="card">
-                        <img src="images/Icon.png">
-                        <h2 style="color: #4D4D4D;">Membership Organisations</h2>
-                        <p style="color: #717171; font-size: 13px;">Our membership management software provides full automation of membership renewals and payments</p>
+
+                </div>
+            </section>
+            <br><br><br>
+
+
+
+            <section class="fifth">
+                <div class="image5">
+                    <img src="images/rafiki.png" height="250px" width="340px">
+                </div>
+                <div class="text5">
+                    <h3>The unseen of spending three years at Pixelgrade</h3>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed sit amet justo ipsum. Sed accumsan quam vitae est varius fringilla. Pellentesque placerat vestibulum lorem sed porta. Nullam mattis tristique iaculis. Nullam pulvinar sit amet risus pretium auctor. Etiam quis massa pulvinar, aliquam quam vitae, tempus sem. Donec elementum pulvinar odio.</p>
+                    <button class="reg-btn" style="margin-top: 13px;">Learn More</button>
+                </div>
+            </section>
+            <br><br><br>
+
+
+
+
+            <section class="sec-6">
+                <div class="sixth">
+                <div class="left6 text6">
+                    <h3>Helping a local <br><span style="color: #4CAF4F;">business reinvent itself</span></h3>
+                    <p>We reached here with our hard work and dedication</p>
+                </div>
+
+
+                <div class="right6">
+
+                    <div class="whole">
+                            <div class="whl-img">
+                                <img src="images/Vector (1).png">
+                            </div>
+                            <div class="quantity">
+                                <h4>2,245,341</h4>
+                                <p>Members</p>
+                            </div>
                     </div>
-                    <div class="card">
-                        <img src="images/Icon (1).png">
-                        <h2 style="color: #4D4D4D;">National Associations</h2>
-                        <p style="color: #717171; font-size: 13px;">Our membership management software provides full automation of membership renewals and payments</p>
+
+
+
+                    <div class="whole">
+                            <div class="whl-img">
+                                <img src="images/Group 2.png">
+                            </div>
+                            <div class="quantity">
+                                <h4>46,328</h4>
+                                <p>Clubs</p>
+                            </div>
                     </div>
-                    <div class="card">
-                        <img src="images/Icon (2).png">
-                        <h2 style="color: #4D4D4D;">Clubs And Groups</h2>
-                        <p style="color: #717171; font-size: 13px;">Our membership management software provides full automation of membership renewals and payments</p>
+
+
+
+                    <div class="whole">
+                            <div class="whl-img">
+                                <img src="images/Vector (2).png">
+                            </div>
+                            <div class="quantity">
+                                <h4>828,867</h4>
+                                <p>Event Bookings</p>
+                            </div>
                     </div>
-                </div> -->
+
+
+
+                    <div class="whole">
+                            <div class="whl-img">
+                                <img src="images/Vector (3).png">
+                            </div>
+                            <div class="quantity">
+                                <h4>1,926,436</h4>
+                                <p>Payments</p>
+                            </div>
+                    </div>
+
+
+
+                </div>
+                </div>
+            </section>
+            <br>
+
+
+
+
+            <section class="seventh">
+                <div class="text7">
+                    <h1>Pellentesque suscipit<br>fringilla libero eu.</h1>
+                    <button class="reg-btn">Get a Demo <i class="fa-solid fa-arrow-right" style="font-size: 12px;"></i></button>
+                </div>
             </section>
 
+
+
+            <section class="last">
+                <div class="last8">
+                <div class="left8">
+
+                    <div class="image8">
+                        <img src="images/nexcent.png">
+                    </div>
+                    <div class="text8" style="margin: 0px;">
+                        <p>Copyright © 2020 Landify UI Kit.</p>
+                        <p>All rights reserved</p>
+                    </div>
+
+
+                    <div class="logos8">
+                        <div>
+                            <img src="images/instagram.png">
+                        </div>
+                        <div>
+                            <img src="images/Social Icons.png">
+                        </div>
+                        <div>
+                            <img src="images/twitter.png">
+                        </div>
+                        <div>
+                            <img src="images/youtube.png">
+                        </div>
+                    </div>
+                </div>
+
+
+
+                <div class="right8">
+                    <div class="company">
+                        <h5>Company</h5>
+                        <p>About us</p>
+                        <p>Blog</p>
+                        <p>Contact us</p>
+                        <p>Pricing</p>
+                        <p>Testimonials</p>
+                    </div>
+                    <div class="support">
+                        <h5>Support</h5>
+                        <p>Help center</p>
+                        <p>Terms of services</p>
+                        <p>Legal</p>
+                        <p>Privacy policy</p>
+                        <p>Status</p>
+                    </div>
+                    <div class="date">
+                        <h5>Stay up to date</h5>
+                        <div class="input8">
+                        <input type="text" placeholder="Your email address">
+                        <div class="send-img">
+                            <img src="images/send.png">
+                        </div>
+                        </div>
+                    </div>
+                </div>
+                </div>
+            </section>
 
 
 
